--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -43,4 +43,13 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="136dp" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="GyroScope Test"
+        android:id="@+id/gyroTestButton"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:textSize="20dp" />
+
 </RelativeLayout>
