--- a/app/src/main/res/layout/content_test_environment.xml
+++ b/app/src/main/res/layout/content_test_environment.xml
@@ -8,7 +8,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_gryoscope_test"
-    tools:context="com.example.alex.parkinsonsdiseaseapp.TestEnvironmentActivity">
+    tools:context=".RestingTremorsActivity">
 
 
     <TextView
