--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -46,8 +46,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Finger Tapping Test"
-        android:id="@+id/button2"
-        android:layout_below="@+id/fingerTapping"
+        android:id="@+id/fingerTapping"
+        android:layout_below="@+id/supAndPro"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="69dp"
