--- a/app/src/main/res/layout/content_supinationpronation.xml
+++ b/app/src/main/res/layout/content_supinationpronation.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:id="@+id/restingtremors"
+    android:id="@+id/supinationpronation"
     android:layout_height="match_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -11,7 +11,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_supinationpronation"
-    tools:context=".RestingTremorsActivity">
+    tools:context=".SupinationPronationActivity">
 
 
     <TextView
