--- a/app/src/main/res/layout/content_finger_tapping.xml
+++ b/app/src/main/res/layout/content_finger_tapping.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,6 +10,12 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.alex.parkinsonsdiseaseapp.FingerTappingActivity"
-    tools:showIn="@layout/activity_finger_tapping">
+    tools:showIn="@layout/activity_finger_tapping"
+    android:id="@+id/lt"
+    android:orientation="vertical">
 
-</RelativeLayout>
+    <com.example.alex.parkinsonsdiseaseapp.Circle
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+</LinearLayout>
