--- a/app/src/main/res/layout/content_configuration.xml
+++ b/app/src/main/res/layout/content_configuration.xml
@@ -4,23 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:id="@+id/restingtremors"
+    android:id="@+id/configuration"
     android:layout_height="match_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_resting_tremors"
-    tools:context=".RestingTremorsActivity">
-
+    tools:showIn="@layout/activity_configuration"
+    tools:context=".ConfigurationActivity">
 
     <TextView
         android:id="@+id/parkinsonsTextView"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:gravity="center"
-        android:text="Resting Tremors"
+        android:text="Please place your device on a stationary flat surface before starting the test. After starting the configuration, do not touch the device and let it run to completion."
         android:textSize="30dp" />
 
     <LinearLayout
@@ -36,12 +35,5 @@
             android:id="@+id/startButton"
             android:text="Start"
             android:layout_width="wrap_content" />
-
-        <Button
-            android:layout_height="wrap_content"
-            android:id="@+id/emailButton"
-            android:text="Email"
-            android:layout_width="wrap_content" />
-
     </LinearLayout>
 </RelativeLayout>
