Finger Tapping back-end 2

--- a/app/src/main/res/layout/content_finger_tapping.xml
+++ b/app/src/main/res/layout/content_finger_tapping.xml
@@ -25,7 +25,10 @@
 
     <com.example.alex.parkinsonsdiseaseapp.Circle
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:visibility="invisible"/>
+
+
 
 
 
