--- a/app/src/main/res/layout/content_finger_tapping.xml
+++ b/app/src/main/res/layout/content_finger_tapping.xml
@@ -1,50 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fingerTapping"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_finger_tapping"
-    tools:context=".FingerTappingActivity">
-
+    tools:context=".FingerTappingActivity"
+    tools:showIn="@layout/activity_finger_tapping">
 
     <TextView
         android:id="@+id/parkinsonsTextView"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:gravity="center"
-        android:text="Please hold the device in the palm of your hand and try to keep still through out the duration of the test."
+        android:text="Please tap the circles as they appear on the screen."
         android:textSize="30dp" />
 
     <com.example.alex.parkinsonsdiseaseapp.Circle
-        android:id = "@+id/cir"
+        android:id="@+id/cir"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility= "invisible" />
+        android:visibility="invisible" />
 
-    <LinearLayout
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/ft_startButton"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:id="@+id/linearLayout">
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="bottom"
+        android:layout_weight="1"
+        android:text="Start"
+        android:textSize="48dp"/>
 
-        <Button
-            android:layout_width="120dp"
-            android:layout_height="58dp"
-            android:text="Start"
-            android:id="@+id/ft_startButton"
-            android:layout_centerHorizontal="true"
-            android:layout_gravity="bottom" />
-
-
-    </LinearLayout>
 </RelativeLayout>
