--- a/app/src/main/res/layout/content_resting_tremors.xml
+++ b/app/src/main/res/layout/content_resting_tremors.xml
@@ -1,19 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/restingtremors"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_resting_tremors"
-    tools:context=".RestingTremorsActivity">
-
+    tools:context=".RestingTremorsActivity"
+    tools:showIn="@layout/activity_resting_tremors">
 
     <TextView
         android:id="@+id/parkinsonsTextView"
@@ -23,18 +21,13 @@
         android:text="Please hold the device in the palm of your hand and try to keep still through out the duration of the test."
         android:textSize="30dp" />
 
-    <LinearLayout
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/startButton"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:id="@+id/linearLayout">
-
-        <Button
-            android:layout_height="wrap_content"
-            android:id="@+id/startButton"
-            android:text="Start"
-            android:layout_width="wrap_content" />
-    </LinearLayout>
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="bottom"
+        android:layout_weight="1"
+        android:text="Start"
+        android:textSize="48dp" />
 </RelativeLayout>
