--- a/app/src/main/res/layout/content_finger_tapping.xml
+++ b/app/src/main/res/layout/content_finger_tapping.xml
@@ -14,6 +14,12 @@
     tools:showIn="@layout/activity_finger_tapping"
     tools:context=".FingerTappingActivity">
 
+    <TextView
+        android:id="@+id/timer"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:gravity="center"
+        android:textSize="30dp" />
 
     <TextView
         android:id="@+id/parkinsonsTextView"
