--- a/app/src/main/res/layout/content_finger_tapping.xml
+++ b/app/src/main/res/layout/content_finger_tapping.xml
@@ -19,7 +19,8 @@
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:gravity="center"
-        android:textSize="30dp" />
+        android:textSize="30dp"
+        android:visibility="invisible" />
 
 
     <TextView
