--- a/app/src/main/res/layout/content_finger_tapping.xml
+++ b/app/src/main/res/layout/content_finger_tapping.xml
@@ -11,25 +11,40 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
 
-    tools:showIn="@layout/activity_finger_tapping"
-    tools:context=".FingerTappingActivity">
+    tools:context=".FingerTappingActivity"
+    tools:showIn="@layout/activity_finger_tapping">
 
-    <TextView
-        android:id="@+id/timer"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:gravity="center"
-        android:textSize="30dp"
-        android:visibility="invisible" />
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
+        <TextView
+            android:id="@+id/timer"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="start"
+            android:textSize="30sp"
+            android:visibility="invisible" />
+
+        <TextView
+            android:id="@+id/counter"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="end"
+            android:textSize="30sp"
+            android:visibility="invisible" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/parkinsonsTextView"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:gravity="center"
-        android:text="Please tap the circles as they appear on the screen."
-        android:textSize="30dp" />
+        android:text=""
+        android:textSize="30sp" />
 
     <com.example.alex.parkinsonsdiseaseapp.Circle
         android:id="@+id/cir"
@@ -43,8 +58,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_gravity="bottom"
-        android:layout_weight="1"
-        android:text="Start"
-        android:textSize="48dp"/>
+        android:text="@string/Start"
+        android:textSize="48sp" />
 
 </RelativeLayout>
