--- a/app/src/main/res/layout/content_configuration.xml
+++ b/app/src/main/res/layout/content_configuration.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/configuration"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_configuration"
-    tools:context=".ConfigurationActivity">
+    tools:context=".ConfigurationActivity"
+    tools:showIn="@layout/activity_configuration">
 
     <TextView
         android:id="@+id/parkinsonsTextView"
@@ -20,20 +19,15 @@
         android:layout_height="fill_parent"
         android:gravity="center"
         android:text="Please place your device on a stationary flat surface before starting the configuration. After starting, do not touch the device and let it run to completion. Configuration will take a few seconds."
-        android:textSize="30sp" />
+        android:textSize="30sp"
+        android:layout_above="@+id/startButton" />
 
-    <LinearLayout
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/startButton"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:id="@+id/linearLayout">
-
-        <Button
-            android:layout_height="wrap_content"
-            android:id="@+id/startButton"
-            android:text="@string/Start"
-            android:layout_width="wrap_content" />
-    </LinearLayout>
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="bottom"
+        android:text="@string/Start"
+        android:textSize="48sp" />
 </RelativeLayout>
