--- a/app/src/main/res/layout/content_finger_tapping.xml
+++ b/app/src/main/res/layout/content_finger_tapping.xml
@@ -50,7 +50,8 @@
         android:id="@+id/cir"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="invisible" />
+        android:visibility="invisible"
+        android:layout_above="@+id/ft_startButton" />
 
     <Button
         android:id="@+id/ft_startButton"
