--- a/app/src/main/res/layout/content_resting_tremors.xml
+++ b/app/src/main/res/layout/content_resting_tremors.xml
@@ -19,7 +19,8 @@
         android:layout_height="fill_parent"
         android:gravity="center"
         android:text="Please hold the device in the palm of your hand and try to keep still through out the duration of the test."
-        android:textSize="30dp" />
+        android:textSize="30dp"
+        android:layout_above="@+id/startButton" />
 
     <Button
         android:id="@+id/startButton"
